# dotfiles

./: .bash_profile  .bashrc  .fehbg  .gitignore  .pypirc  00-init.sh  01-init.sh  09-ignores.sh  10-base.sh  10-core.sh  10-ignores.sh  11-drivers.sh  11-network.sh  12-docs.sh  13-network.sh  13-shell.sh  14-boot.sh  14-network.sh  20-boot.sh  20-sys-admin.sh  40-dev.sh  41-shell.sh  41-terminal.sh  50-conf-mgmt.sh  50-sys-admin.sh  60-desktop-core.sh  61-audio.sh  62-bluetooth.sh  70-desktop.sh  70-gui.sh  70-tui-apps.sh  71-audio.sh  72-bluetooth.sh  90-gui-apps.sh  90-misc.sh  91-fonts.sh  98-apps.sh  README.md  README.org  dev_requirements.txt  (+4 more)
.config/: mimeapps.list  profile
.config/X11/: xinitrc
.config/aconfmgr/: 00-init.sh  09-ignores.sh  10-core.sh  11-drivers.sh  11-user.sh  12-boot.sh  12-drivers-and-file-systems.sh  12-drivers.sh  13-boot.sh  13-shell.sh  14-network.sh  14-shell.sh  15-docs.sh  15-network.sh  17-fonts.sh  20-desktop.sh  20-sys-admin.sh  21-audio.sh  21-xorg-tools.sh  22-audio.sh  50-fonts.sh  50-sys-admin.sh  51-backups.sh  60-desktop-core.sh  60-dev.sh  61-audio.sh  61-python.sh  62-bluetooth.sh  70-tui-apps.sh  80-dev.sh  (+4 more)
.xmonad/: xmobar.hs  xmonad.hs
LAMP/: httpd.conf  php.ini
alsa/: .asoundrc
asdf/: .tool-versions
emacs/: .spacemacs  config.el  packages-config.el
git/: config
neovim/: init.vim
refind/: manual.conf
shells/: starship.toml
systemd-units/: check-battery.service
taskwarrior/: .taskrc
termite/: config
udev-rules/: 98-discharging.rules  99-lowbat.rules
xorg/: .Xresources  .xinitrc  30-touchpad.conf
(+151 files in other folders)
