[tool.poetry]
name = "sync-dotfiles"
version = "0.1.0"
description = "Keep your dotfiles no matter where you go"
authors = ["Ali Ghahraei <aligf94@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
sh = "^1.12"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sync_dotfiles = "sync_dotfiles:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
